--- a/docs/fhatos.adoc
+++ b/docs/fhatos.adoc
@@ -93,7 +93,7 @@ $ fhatos --boot:config=../conf/boot-loader.obj
 [INFO]  [/sys/router] heap <none> spanning /mnt/# mounted
 [INFO]  [/sys/router] heap /mnt/boot spanning /boot/# mounted
 [INFO]  [/sys/router] ../../../conf/boot_config.obj boot config file loaded (size: 902 bytes)
-[INFO]  [/sys/router] 
+[INFO]  [/sys/router]
   [
     router=>[resolve=>[namespace=>[:=>/mmadt/,fos:=>/fos/],auto_prefix=>[,/mmadt/,/mmadt/ext/,/fos/,/fos/sys/,/fos/io/,/fos/sensor/,/fos/ui/,/fos/util/,/sys/],query=>[write=>[lock=>to_do]],default_config=>[query=>[write=>[sub=>noobj]]]]]
     scheduler=>[def_stack_size=>16192]
@@ -759,9 +759,9 @@ noobj
 fhatos> /mmadt/noobj[]
 fhatos> noobj[]
 fhatos> noobj
-fhatos> 
+fhatos>
 
-fhatos> 
+fhatos>
 
 ----
 
@@ -838,8 +838,8 @@ A https://en.wikipedia.org/wiki/Character_(computing)[char] is a `str` containin
 ++++
 <!-- 🐖 ./main_runner.out
 *char
-char['a']@a
-char['b']@b
+=== char['a']@a ===
+=== char['b']@b ===
 @a + @b
 *a
 @a.as(str) + @b
@@ -856,7 +856,7 @@ fhatos> char['a']@a
 fhatos> char['b']@b
 ==>char['b']@b
 fhatos> @a + @b
-[ERROR] [/sys/scheduler] [/sys/lang/parser] 'aa'@a is not a /mmadt/ext/char as defined by char()[merge(2).count().is(eq(1))] 
+[ERROR] [/sys/scheduler] [/sys/lang/parser] 'aa'@a is not a /mmadt/ext/char as defined by char()[merge(2).count().is(eq(1))]
 	  thrown at inst char['a']@a => plus(char['a']@a)[cpp] [0=>char['a']@a]
 fhatos> *a
 ==>'aa'@a
@@ -892,13 +892,13 @@ fhatos> *nat
 fhatos> nat[12]
 ==>nat[12]
 fhatos> nat[-30]
-[ERROR] [/sys/scheduler] [/sys/lang/parser] -30 is not a /mmadt/ext/nat as defined by nat()[is(gte(0))] 
+[ERROR] [/sys/scheduler] [/sys/lang/parser] -30 is not a /mmadt/ext/nat as defined by nat()[is(gte(0))]
 fhatos> nat[12]@a
 ==>nat[12]@a
 fhatos> @a.minus(11)
 ==>nat[1]@a
 fhatos> @a.minus(2)
-[ERROR] [/sys/scheduler] [/sys/lang/parser] -1@a is not a /mmadt/ext/nat as defined by nat()[is(gte(0))] 
+[ERROR] [/sys/scheduler] [/sys/lang/parser] -1@a is not a /mmadt/ext/nat as defined by nat()[is(gte(0))]
 	  thrown at inst nat[1]@a => minus(0?int=>2)[cpp] [0=>2]
 fhatos> *a
 ==>nat[1]@a
@@ -930,7 +930,7 @@ fhatos> C[0.0]
 fhatos> C[274.0]
 ==>C[274.000000]
 fhatos> C[-274.0]
-[ERROR] [/sys/scheduler] [/sys/lang/parser] -274.00000 is not a /mmadt/ext/C as defined by C()[is(gte(-273.14999))] 
+[ERROR] [/sys/scheduler] [/sys/lang/parser] -274.00000 is not a /mmadt/ext/C as defined by C()[is(gte(-273.14999))]
 ----
 
 ++++
@@ -1040,7 +1040,7 @@ fhatos> 3.band(2,8)                           // <1>
 fhatos> 3.band(max=>8,min=>2)                 // <2>
 ==>3
 fhatos> 'abc'.band(2,8)                       // <3>
-[ERROR] [/sys/scheduler] [/sys/lang/parser] 2 is not a str as defined by [str][_] 
+[ERROR] [/sys/scheduler] [/sys/lang/parser] 2 is not a str as defined by [str][_]
 		 \_/mmadt/int is not a subtype of /mmadt/str
 	  thrown at inst 'abc' => band?int{?}<=int(min=>2,max=>8)[is(and([gte(from(min)),lte(from(max))]))] [min=>2,max=>8]
 ----
@@ -1127,7 +1127,7 @@ fhatos> is_divisible -> |is_divisble?bool<=int(by?int=>_)[mod(*by).eq(0)]
 fhatos> 10.is_divisible(2)
 ==>true
 fhatos> 10.is_divisible('abc')
-[ERROR] [/sys/scheduler] [/sys/lang/parser] 'abc' is not a int as defined by [int][_] 
+[ERROR] [/sys/scheduler] [/sys/lang/parser] 'abc' is not a int as defined by [int][_]
 		 \_/mmadt/str is not a subtype of /mmadt/int
 ----
 
@@ -1171,7 +1171,7 @@ fhatos> 10.(min=>2,max=>10)[is(and([gte(*min),lte(*max)]))]                // <1
 fhatos> 10.(min=>minus(1),max=>plus(1))[is(and([gte(*min),lte(*max)]))]   // <2>
 ==>10
 fhatos> 10.()[is(and([gte(*min),lte(*max)]))]                             // <3>
-[ERROR] [/sys/scheduler] [/sys/lang/parser] noobj is not a int as defined by [int][_] 
+[ERROR] [/sys/scheduler] [/sys/lang/parser] noobj is not a int as defined by [int][_]
 		 \_/mmadt/noobj is not a subtype of /mmadt/int
 	  thrown at inst 10 => inst()[is(and([gte(from(min)),lte(from(max))]))] [=>]
 fhatos> |((min=>2,max=>8)[is(and([gte(*min),lte(*max)]))])                // <4>
@@ -1211,7 +1211,7 @@ fhatos> is_divisible -> |is_divisble?bool<=int(by?int=>_)[mod(*by).eq(0)]
 fhatos> 10.is_divisible(2)
 ==>true
 fhatos> 10.is_divisible('abc')
-[ERROR] [/sys/scheduler] [/sys/lang/parser] 'abc' is not a int as defined by [int][_] 
+[ERROR] [/sys/scheduler] [/sys/lang/parser] 'abc' is not a int as defined by [int][_]
 		 \_/mmadt/str is not a subtype of /mmadt/int
 ----
 
@@ -1245,7 +1245,7 @@ fhatos> band -> |band?int{?}<=int(min=>_,max=>is(gt(*min)).else(*min.plus(1)))[i
 ==>band?int{?}<=int(min=>_,max=>is?noobj<=obj(gt?noobj<=obj(from?noobj<=obj(min)[noobj])[noobj])[noobj].else?noobj<=obj(from?noobj<=obj(min)[noobj].plus?noobj<=obj(1)[noobj])[noobj])
 	[is(gte(from(min))).is(lte(from(max)))]
 fhatos> 2.band(min=>1,max=>1)                 // <1>
-[ERROR] [/sys/scheduler] [/sys/lang/parser] noobj is not a int as defined by [int][_] 
+[ERROR] [/sys/scheduler] [/sys/lang/parser] noobj is not a int as defined by [int][_]
 		 \_/mmadt/noobj is not a subtype of /mmadt/int
 ----
 
@@ -1276,7 +1276,7 @@ fhatos> is_divisible -> |is_divisble?bool<=int(by?int=>is(neq(0)).else(print('er
 fhatos> 10.is_divisible(2)
 error==>true
 fhatos> 10.is_divisible('abc')
-error[ERROR] [/sys/scheduler] [/sys/lang/parser] 'abc' is not a int as defined by [int][_] 
+error[ERROR] [/sys/scheduler] [/sys/lang/parser] 'abc' is not a int as defined by [int][_]
 		 \_/mmadt/str is not a subtype of /mmadt/int
 ----
 
@@ -1568,7 +1568,7 @@ c: 2
 c: 3
 c: 4
 c: 5
-fhatos> 
+fhatos>
 c: 6
 c: 7
 c: 8
@@ -1674,7 +1674,7 @@ fhatos> @a + 1
 fhatos> @a + 1
 ==>int8[128]@a
 fhatos> @a + 1                               // <3>
-[ERROR] [/sys/scheduler] [/sys/lang/parser] 129@a is not a /mmadt/ext/int8 as defined by uint8()[is(gte(-127)).is(lte(128))] 
+[ERROR] [/sys/scheduler] [/sys/lang/parser] 129@a is not a /mmadt/ext/int8 as defined by uint8()[is(gte(-127)).is(lte(128))]
 	  thrown at inst int8[128]@a => plus(0?int=>1)[cpp] [0=>1]
 ----
 
@@ -1943,244 +1943,6 @@ For example, `2.mult(plus(3))` is evaluated as follows:
 \]
 ++++
 
-====== Rec Application
-
-A `rec` behaves in a similar manner to `lst` and `inst` when a left-hand side `obj` is applied to it.
-However, what makes
-`rec` interesting and useful beyond a data storage structure is it's _delayed evaluation semantics_ denoted by `=>`.
-
-++++
-<!-- 🐖 ./main_runner.out
-2.rec[[is(gt(2)) => plus(2), _ => 0]]
--->
-++++
-
-[source,mmadt]
-----
-fhatos> 2.rec[[is(gt(2)) => plus(2), _ => 0]]
-[ERROR] [/sys/scheduler] [/mmadt/obj] /mmadt/gt?dom=/mmadt/obj&dc=0,1&rng=/mmadt/bool&rc=1,1 inst unresolved 
-	         lhs id      inst id      resolve obj                                      
-	  ->[/mmadt/obj] /mmadt/gt => gt?bool<=obj{?}()
-----
-
-++++
-<!-- 🐓 -->
-++++
-
-This feature of `rec` make it both a https://en.wikipedia.org/wiki/Data_structure[data structure] and a https://en.wikipedia.org/wiki/Control_flow[flow control structure] as once an `obj` has been applied to `rec`, the values of `rec` can be "drained".
-For instance, `if` is implemented with a two entry `rec`, where one entry maps to `noobj`.
-
-++++
-<!-- 🐖 ./main_runner.out
-/io/console/config/nest -> 0                  --- <1>
-{1,2,3}.[is(gt(2)) => _, _ => noobj]          --- <2>
-{1,2,3}.[is(gt(2)) => _, _ => noobj]>-        --- <3>
--->
-++++
-
-[source,mmadt]
-----
-fhatos> /io/console/config/nest -> 0                  // <1>
-==>0
-fhatos> {1,2,3}.[is(gt(2)) => _, _ => noobj]          // <2>
-[ERROR] [/sys/scheduler] [/mmadt/obj] /mmadt/gt?dom=/mmadt/obj&dc=0,1&rng=/mmadt/bool&rc=1,1 inst unresolved 
-	         lhs id      inst id      resolve obj                                      
-	  ->[/mmadt/obj] /mmadt/gt => gt?bool<=obj{?}()
-fhatos> {1,2,3}.[is(gt(2)) => _, _ => noobj]>-        // <3>
-[ERROR] [/sys/scheduler] [/mmadt/obj] /mmadt/gt?dom=/mmadt/obj&dc=0,1&rng=/mmadt/bool&rc=1,1 inst unresolved 
-	         lhs id      inst id      resolve obj                                      
-	  ->[/mmadt/obj] /mmadt/gt => gt?bool<=obj{?}()
-----
-
-++++
-<!-- 🐓 -->
-++++
-
-<1> Reducing the console's display depth for nested structures (purely aesthetic).
-<2> A stream of `objs` is applied one-by-one to the `rec` yielding a new internally-applied `rec`.
-<3> The internally-applied `rec` is "drained" via the `merge` `inst` (sugar'd `>-`).
-
-In the above example, since `1` and `2` were mapped to `noobj`, they are effectively removed from the execution pipeline.
-However, because `3` is `gt(2)`, it is mapped to `_` (its self).
-Thus, when `>-` is applied to this `rec`, the result is
-`{noobj,noobj,3}` which is equivalent to `{3}`.
-In this way, `rec` is both a data structure and a flow control structure.
-
-It's not difficult to realize how an "if"-`rec` generalizes to support the various plays on one of computing's most important concepts: https://en.wikipedia.org/wiki/Branch_(computer_science)[the branch].
-
-[tabs]
-====
-if-else::
-+
---
-
-.if-else icon:link[link=https://en.wikipedia.org/wiki/Conditional_(computer_programming)#If%E2%80%93then(%E2%80%93else),2x,role=blue]
-++++
-<!-- 🐖 ./main_runner.out
-{1,2,3}-|[                            /
-  is(gt(2)) => mult(-1),      --- <1> /
-  _         => mult(100)]     --- <2>
-{1,2,3}-|[                            /
-  is(gt(2)) => mult(-1),              /
-  _         => mult(100)]>-
--->
-++++
-
-[source,mmadt]
-----
-fhatos> {1,2,3}-|[                           
-          is(gt(2)) => mult(-1),      // <1>
-          _         => mult(100)]     // <2>
-==>1
-==>2
-==>3
-fhatos> {1,2,3}-|[                           
-          is(gt(2)) => mult(-1),             
-          _         => mult(100)]>-
-==>100
-==>200
-==>-3
-----
-
-++++
-<!-- 🐓 -->
-++++
-
-<1> The _if_ branch.
-<2> The _else_ branch.
-
---
-switch::
-+
---
-
-.switch icon:link[link=https://en.wikipedia.org/wiki/Conditional_(computer_programming)#Case_and_switch_statements,2x,role=blue]
-++++
-<!-- 🐖 ./main_runner.out
-{1,2,3}-<[                   /
-  is(gt(0)) => mult(-1),    /
-  is(gt(1)) => mult(0),     /
-  is(gt(2)) => _]
-{1,2,3}-<[                  /
-  is(gt(0)) => mult(-1),    /
-  is(gt(1)) => mult(0),     /
-  is(gt(2)) => _]>-
--->
-++++
-
-[source,mmadt]
-----
-fhatos> {1,2,3}-<[                  
-          is(gt(0)) => mult(-1),   
-          is(gt(1)) => mult(0),    
-          is(gt(2)) => _]
->[
-==>is(gt(0))=>-1
-==>is(gt(1))=>noobj
-==>is(gt(2))=>noobj
->]
->[
-==>is(gt(0))=>-2
-==>is(gt(1))=>0
-==>is(gt(2))=>noobj
->]
->[
-==>is(gt(0))=>-3
-==>is(gt(1))=>0
-==>is(gt(2))=>3
->]
-fhatos> {1,2,3}-<[                 
-          is(gt(0)) => mult(-1),   
-          is(gt(1)) => mult(0),    
-          is(gt(2)) => _]>-
-==>-1
-==>-2
-==>0
-==>-3
-==>0
-==>3
-----
-
-++++
-<!-- 🐓 -->
-++++
---
-guard::
-+
---
-
-.guard icon:link[link=https://en.wikipedia.org/wiki/Conditional_(computer_programming)#Guarded_conditionals,2x,role=blue]
-++++
-<!-- 🐖 ./main_runner.out
-{1,2,3}.[
--->
-++++
-
-[source,mmadt]
-----
-fhatos> {1,2,3}.[
-==>1
-==>2
-==>3
-----
-
-++++
-<!-- 🐓 -->
-++++
---
-
-pattern::
-+
---
-
-.pattern-match icon:link[link=https://en.wikipedia.org/wiki/Conditional_(computer_programming)#Pattern_matching,2x,role=blue]
-++++
-<!-- 🐖 ./main_runner.out
---- todo
--->
-++++
-
-[source,mmadt]
-----
-fhatos> --- todo
-----
-
-++++
-<!-- 🐓 -->
-++++
---
-
-hash::
-+
---
-++++
-<!-- 🐖 ./main_runner.out
-[HEADER] .conditional hash icon:link[link=https://en.wikipedia.org/wiki/Conditional_(computer_programming)#Hash-based_conditionals,2x,role=blue]
---- todo
--->
-++++
-
-.conditional hash icon:link[link=https://en.wikipedia.org/wiki/Conditional_(computer_programming)#Hash-based_conditionals,2x,role=blue]
-[source,mmadt]
-----
-fhatos> --- todo
-----
-
-++++
-<!-- 🐓 -->
-++++
---
-====
-
-====
-NOTE: The `merge` (sugar'd `>-`) instruction has a correlate: `split` (sugar'd `-<`).
-The way to think of these two instructions is that they either branch a serial execution pipeline (`split`) or the join a collection of parallel executing pipelines (`merge`).
-Interestingly, the application of an `obj` to a `poly` implements the `split` instruction.
-So why does an explicit `split` instruction exist?
-Because there are other ways in which branching pipelines can be defined and evaluated.
-This will be discussed later when discussing `fos:thread`, `fos:coroutine`, and `fos:fiber`.
-====
-
 ====== Obj Application
 
 The universal application of `.` (apply) implies that every `obj` is a function as every `obj` can have another `obj` applied to it.
@@ -2329,7 +2091,7 @@ fhatos> true.i?bool<=bool(_)[and(_,*<0>)]
 	 [/mnt/cache] no query processor for dom=/mmadt/bool&dc=1,1&rng=/mmadt/bool&rc=1,1 on read
 [ERROR] [/sys/router] unable to read from true.i?dom=/mmadt/bool&dc=1,1&rng=/mmadt/bool&rc=1,1
 	 [/mnt/cache] no query processor for dom=/mmadt/bool&dc=1,1&rng=/mmadt/bool&rc=1,1 on read
-[ERROR] [/sys/scheduler] [/sys/lang/parser] noobj is not a lst as defined by [lst][_] 
+[ERROR] [/sys/scheduler] [/sys/lang/parser] noobj is not a lst as defined by [lst][_]
 		 \_/mmadt/noobj is not a subtype of /mmadt/lst
 	  thrown at inst noobj => true.i(noobj)[and(_,from(0))] [0=>noobj]
 fhatos> true.plus(false)
@@ -2341,12 +2103,299 @@ fhatos> true.plus(false)
 ++++
 --
 
+====
 
+====== Rec Application
+
+The `rec` (record) is a mult-faceted `obj` naturally supporting both the of structuring data and the controlling of data flows.
+These features are made possible by `recs` _delayed evaluation semantics_, denoted `=>`.
+
+[tabs]
+====
+
+data structure::
++
+--
+
+++++
+<!-- 🐖 ./main_runner.out
+person -> |[name?str=>_,age?nat=>?<120]
+person[[name=>'marko',age=>29]]
+person[[name=>'lili',age=>129]]
+-->
+++++
+
+++++
+<!-- 🐓 -->
+++++
+--
+
+flow control::
++
+--
+
+++++
+<!-- 🐖 ./main_runner.out
+1.[a=>+10,b=>as(str).plus('abc')].[a=>mod(2),b=>+'def']   --- <1>
+1.-|[is(gt(0))=>'good: {_}', _=>'bad:{_}']                --- <2>
+-->
+++++
+
+++++
+<!-- 🐓 -->
+++++
+
+<1> two parallel branches of computation composed by `rec` key matching.
+<2> two parallel branches of computation selected by `rec` key matching.
+
+[cols="6,9"]
+|===
+a|
+[.center]
+[source,mmadt]
+----
+    ┌──plus(10)───────────mod(2)──────┐
+    a                                 a
+1 ──┤                                 ├──[a=>1,b=>'1ab']──>{1,'1ab'}
+    b                                 b
+    └──as(str).plus('a')──plus('b')───┘
+----
+a|
+[.center]
+[source,mmadt]
+----
+    ┌──is(gt(0))────'good: {_}'───┐
+    │                             │
+1 ──┤                             ├──[is(gt(0))=>'good: 1']──>'good: 1'
+    │                             │
+    └────────────────'bad: {_}'───┘
+----
+|===
+--
+
+====
+
+This feature of `rec` make it both a https://en.wikipedia.org/wiki/Data_structure[data structure] and a https://en.wikipedia.org/wiki/Control_flow[flow control structure] as once an `obj` has been applied to `rec`, the values of `rec` can be "drained".
+For instance, `if` is implemented with a two entry `rec`, where one entry maps to `noobj`.
+
+++++
+<!-- 🐖 ./main_runner.out
+/io/console/config/nest -> 0                  --- <1>
+{1,2,3}.[is(gt(2)) => _, _ => noobj]          --- <2>
+{1,2,3}.[is(gt(2)) => _, _ => noobj]>-        --- <3>
+-->
+++++
+
+[source,mmadt]
+----
+fhatos> /io/console/config/nest -> 0                  // <1>
+==>0
+fhatos> {1,2,3}.[is(gt(2)) => _, _ => noobj]          // <2>
+[ERROR] [/sys/scheduler] [/mmadt/obj] /mmadt/gt?dom=/mmadt/obj&dc=0,1&rng=/mmadt/bool&rc=1,1 inst unresolved
+	         lhs id      inst id      resolve obj
+	  ->[/mmadt/obj] /mmadt/gt => gt?bool<=obj{?}()
+fhatos> {1,2,3}.[is(gt(2)) => _, _ => noobj]>-        // <3>
+[ERROR] [/sys/scheduler] [/mmadt/obj] /mmadt/gt?dom=/mmadt/obj&dc=0,1&rng=/mmadt/bool&rc=1,1 inst unresolved
+	         lhs id      inst id      resolve obj
+	  ->[/mmadt/obj] /mmadt/gt => gt?bool<=obj{?}()
+----
+
+++++
+<!-- 🐓 -->
+++++
+
+<1> Reducing the console's display depth for nested structures (purely aesthetic).
+<2> A stream of `objs` is applied one-by-one to the `rec` yielding a new internally-applied `rec`.
+<3> The internally-applied `rec` is "drained" via the `merge` `inst` (sugar'd `>-`).
+
+In the above example, since `1` and `2` were mapped to `noobj`, they are effectively removed from the execution pipeline.
+However, because `3` is `gt(2)`, it is mapped to `_` (its self).
+Thus, when `>-` is applied to this `rec`, the result is
+`{noobj,noobj,3}` which is equivalent to `{3}`.
+In this way, `rec` is both a data structure and a flow control structure.
+
+It's not difficult to realize how an "if"-`rec` generalizes to support the various plays on one of computing's most important concepts: https://en.wikipedia.org/wiki/Branch_(computer_science)[the branch].
+
+[tabs]
+====
+
+if-else::
++
+--
+
+.if-else icon:link[link=https://en.wikipedia.org/wiki/Conditional_(computer_programming)#If%E2%80%93then(%E2%80%93else),2x,role=blue]
+++++
+<!-- 🐖 ./main_runner.out
+{1,2,3}-|[                            /
+  is(gt(2)) => mult(-1),      --- <1> /
+  _         => mult(100)]     --- <2>
+{1,2,3}-|[                            /
+  is(gt(2)) => mult(-1),              /
+  _         => mult(100)]>-
+-->
+++++
+
+[source,mmadt]
+----
+fhatos> {1,2,3}-|[
+          is(gt(2)) => mult(-1),      // <1>
+          _         => mult(100)]     // <2>
+==>1
+==>2
+==>3
+fhatos> {1,2,3}-|[
+          is(gt(2)) => mult(-1),
+          _         => mult(100)]>-
+==>100
+==>200
+==>-3
+----
+
+++++
+<!-- 🐓 -->
+++++
+
+<1> The _if_ branch.
+<2> The _else_ branch.
+
+--
+switch::
++
+--
+
+.switch icon:link[link=https://en.wikipedia.org/wiki/Conditional_(computer_programming)#Case_and_switch_statements,2x,role=blue]
+++++
+<!-- 🐖 ./main_runner.out
+{1,2,3}-<[                   /
+  is(gt(0)) => mult(-1),    /
+  is(gt(1)) => mult(0),     /
+  is(gt(2)) => _]
+{1,2,3}-<[                  /
+  is(gt(0)) => mult(-1),    /
+  is(gt(1)) => mult(0),     /
+  is(gt(2)) => _]>-
+-->
+++++
+
+[source,mmadt]
+----
+fhatos> {1,2,3}-<[
+          is(gt(0)) => mult(-1),
+          is(gt(1)) => mult(0),
+          is(gt(2)) => _]
+>[
+==>is(gt(0))=>-1
+==>is(gt(1))=>noobj
+==>is(gt(2))=>noobj
+>]
+>[
+==>is(gt(0))=>-2
+==>is(gt(1))=>0
+==>is(gt(2))=>noobj
+>]
+>[
+==>is(gt(0))=>-3
+==>is(gt(1))=>0
+==>is(gt(2))=>3
+>]
+fhatos> {1,2,3}-<[
+          is(gt(0)) => mult(-1),
+          is(gt(1)) => mult(0),
+          is(gt(2)) => _]>-
+==>-1
+==>-2
+==>0
+==>-3
+==>0
+==>3
+----
+
+++++
+<!-- 🐓 -->
+++++
+--
+guard::
++
+--
+
+.guard icon:link[link=https://en.wikipedia.org/wiki/Conditional_(computer_programming)#Guarded_conditionals,2x,role=blue]
+++++
+<!-- 🐖 ./main_runner.out
+{1,2,3}.[
+-->
+++++
+
+[source,mmadt]
+----
+fhatos> {1,2,3}.[
+==>1
+==>2
+==>3
+----
+
+++++
+<!-- 🐓 -->
+++++
+--
+
+pattern::
++
+--
+
+.pattern-match icon:link[link=https://en.wikipedia.org/wiki/Conditional_(computer_programming)#Pattern_matching,2x,role=blue]
+++++
+<!-- 🐖 ./main_runner.out
+--- todo
+-->
+++++
+
+[source,mmadt]
+----
+fhatos> --- todo
+----
+
+++++
+<!-- 🐓 -->
+++++
+--
+
+hash::
++
+--
+++++
+<!-- 🐖 ./main_runner.out
+[HEADER] .conditional hash icon:link[link=https://en.wikipedia.org/wiki/Conditional_(computer_programming)#Hash-based_conditionals,2x,role=blue]
+--- todo
+-->
+++++
+
+.conditional hash icon:link[link=https://en.wikipedia.org/wiki/Conditional_(computer_programming)#Hash-based_conditionals,2x,role=blue]
+[source,mmadt]
+----
+fhatos> --- todo
+----
+
+++++
+<!-- 🐓 -->
+++++
+--
+
+====
+
+====
+NOTE: The `merge` (sugar'd `>-`) instruction has a correlate: `split` (sugar'd `-<`).
+The way to think of these two instructions is that they either branch a serial execution pipeline (`split`) or the join a collection of parallel executing pipelines (`merge`).
+Interestingly, the application of an `obj` to a `poly` implements the `split` instruction.
+So why does an explicit `split` instruction exist?
+Because there are other ways in which branching pipelines can be defined and evaluated.
+This will be discussed later when discussing `fos:thread`, `fos:coroutine`, and `fos:fiber`.
 ====
 
 ==== Values
 
-===== By Value vs. By Reference
+===== By Value vs.
+
+By Reference
 
 [cols="2,2"]
 |===
@@ -2379,12 +2428,12 @@ fhatos> age -> \|(is(gt(0)).is(lt(120)))
 fhatos> a -> age[45]
 ==>age[45]
 fhatos> *a.inspect()
-[ERROR] [/sys/scheduler] [/mmadt/obj] /mmadt/gt?dom=/mmadt/obj&dc=0,1&rng=/mmadt/bool&rc=1,1 inst unresolved 
-	         lhs id      inst id      resolve obj                                      
+[ERROR] [/sys/scheduler] [/mmadt/obj] /mmadt/gt?dom=/mmadt/obj&dc=0,1&rng=/mmadt/bool&rc=1,1 inst unresolved
+	         lhs id      inst id      resolve obj
 	  ->[/mmadt/obj] /mmadt/gt => gt?bool<=obj{?}()
 fhatos> @a.inspect()
-[ERROR] [/sys/scheduler] [/mmadt/obj] /mmadt/gt?dom=/mmadt/obj&dc=0,1&rng=/mmadt/bool&rc=1,1 inst unresolved 
-	         lhs id      inst id      resolve obj                                      
+[ERROR] [/sys/scheduler] [/mmadt/obj] /mmadt/gt?dom=/mmadt/obj&dc=0,1&rng=/mmadt/bool&rc=1,1 inst unresolved
+	         lhs id      inst id      resolve obj
 	  ->[/mmadt/obj] /mmadt/gt => gt?bool<=obj{?}()
 ----
 
@@ -2455,16 +2504,16 @@ For instance, if a natural number stem:[\mathbb{N}] is any non-negative number, 
 [source,mmadt]
 ----
 fhatos> /type/int/nat -> |is(gt(0))
-[ERROR] [/sys/router] no mounted structure for /type/int/nat  
+[ERROR] [/sys/router] no mounted structure for /type/int/nat
 ==>is?noobj<=obj(gt?noobj<=obj(0)[noobj])[noobj]
 fhatos> nat[6]
 ==>nat[6]
 fhatos> nat[-6]
-[ERROR] [/sys/scheduler] [/sys/lang/parser] -6 is not a /mmadt/ext/nat as defined by nat()[is(gte(0))] 
+[ERROR] [/sys/scheduler] [/sys/lang/parser] -6 is not a /mmadt/ext/nat as defined by nat()[is(gte(0))]
 fhatos> nat[3].plus(2)
 ==>nat[5]
 fhatos> nat[3].mult(-2)
-[ERROR] [/sys/scheduler] [/sys/lang/parser] -6 is not a /mmadt/ext/nat as defined by nat()[is(gte(0))] 
+[ERROR] [/sys/scheduler] [/sys/lang/parser] -6 is not a /mmadt/ext/nat as defined by nat()[is(gte(0))]
 	  thrown at inst nat[3] => mult(0?int=>-2)[cpp] [0=>-2]
 ----
 
@@ -3081,6 +3130,7 @@ Once found, it then traverses within the match to resolve the remaining path seg
 
 .Amortized Costs in Terms of Time
 [.small][.center]
+
 [%header,width=50%,cols="l2,c1,c1,c1"]
 |===
 | embedding              | single-element | row-access  | column-access
@@ -3089,11 +3139,11 @@ Once found, it then traverses within the match to resolve the remaining path seg
 | [.red]#row_column#     | \$O(1)\$       | \$O(1)\$    | \$O(1)\$
 |===
 
-The different embeddings also have different space costs, where space is defined as the amount of data accessed (i.e. retrieved from the structure) in order to
-satisfy the resolution of the respective fURI.
+The different embeddings also have different space costs, where space is defined as the amount of data accessed (i.e. retrieved from the structure) in order to satisfy the resolution of the respective fURI.
 
 .Amortized Costs in Terms of Space
 [.small][.center]
+
 [%header,width=50%,cols="l2,c1,c1,c1"]
 |===
 | embedding              | single-element | row-access    | column-access
@@ -3101,7 +3151,6 @@ satisfy the resolution of the respective fURI.
 | [.red]#row#            | \$O(n)\$       | \$O(n)\$      | \$O(n+m)\$
 | [.red]#row_column#     | \$O(n+m)\$     | \$O(n+m)\$    | \$O(n+m)\$
 |===
-
 
 [source,mmadt]
 ----
